--- a/YSATDD_3/Initial/Initial.csproj
+++ b/YSATDD_3/Initial/Initial.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataServer.cs" />
+    <Compile Include="DataSource.cs" />
+    <Compile Include="DataSourceLegacy.cs" />
+    <Compile Include="LegacyService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
