Pushed copy to DataSourceCopyer class

--- a/YSATDD_3/Initial/Initial.csproj
+++ b/YSATDD_3/Initial/Initial.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="DataServer.cs" />
     <Compile Include="DataSource.cs" />
+    <Compile Include="DataSourceCopyer.cs" />
     <Compile Include="DataSourceLegacy.cs" />
     <Compile Include="ILegacyService.cs" />
     <Compile Include="LegacyService.cs" />
